--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -230,3 +230,45 @@ nav ul li a {
         /* Make items full-width */
     }
 }
+
+body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    background-color: #404040;
+    padding: 10px;
+    text-align: center;
+    transition: transform 0.3s ease, height 0.3s ease;
+}
+
+header.collapsed {
+    transform: translateY(-100%);
+    height: 0;
+    padding: 0;
+    visibility: hidden;
+}
+
+nav {
+    background-color: #020011;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav button {
+    background-color: #020011;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+nav button:hover {
+    background-color: #555;
+}
