--- a/templates/Brief.html
+++ b/templates/Brief.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
 
+<style>
+    .hints-container {
+        justify-content: center;
+    }
+
+    .question-hints {
+        width: 25%;
+        background-color: transparent;
+        text-align: left;
+    }
+</style>
 
 
 <body>
@@ -61,20 +72,24 @@
         <h2>M</h2>
     </section>
 
+<section class="hints-container">
+    <section class="question-hints"></section>
 
-    <section class="section-default">
-        <p>MR X<br><br>
+    <section class="question-hints">
+        <h1>MR X</h1><p><br><br>
 
-            - Age: Unknown<br>
+            <li>Age: Unknown</li><br>
             - Race: Unknown<br>
             - Anything at all about him: Unknown<br>
 
     </section>
 
+    <section class="question-hints"></section>
 
 
-    <section class="section-default">
-        <p>HENCHMAN 1<br><br>
+
+    <section class="question-hints">
+        <h1>HENCHMAN 1</h1><p><br><br>
 
             Described by witnesses as:<br><br>
 
@@ -86,8 +101,8 @@
 
     </section>
 
-    <section class="section-default">
-        <p>HENCHMAN 2<br><br>
+    <section class="question-hints">
+        <h1>HENCHMAN 2</h1><p><br><br>
 
             Described by witnesses as:<br><br>
 
@@ -98,8 +113,8 @@
 
     </section>
 
-    <section class="section-default">
-        <p>HENCHMAN 3<br><br>
+    <section class="question-hints">
+        <h1>HENCHMAN 3</h1><p><br><br>
 
             Described by witnesses as:<br><br>
 
@@ -110,7 +125,7 @@
             - Conoisseur of boonie hats, ripped jeans and fleeces since before they were cool</p>
 
     </section>
-
+</section>
 
 
     <div class="centered">
